data/issues_nolabel/nolabel_test_10647.txt
SyntaxError: invalid syntax when import tensorflow-gpu as tf

hiiiii,,,,
iam newbie in tensorflow, i have followed tutorial from https://www.tensorflow.org/versions/r0.12/get_started/os_setup#using_conda. Every step that i take,  no error,
but when import tensorflow, it's appears error, like this

import tensorflow-gpu as tf
File "", line 1
import tensorflow-gpu as tf
^
SyntaxError: invalid syntax

please help me